2006-07-19  Sergei Gavrikov  <w3sg@softhome.net>

	* doc/athttpd.sgml: jade doesn't allow underscores in
	id attributes, so fix.

2006-07-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/httpd.cdl: Add -D __ECOS in compiler flags.
	Change include_dir to cyg/athttpd.
	Rename all CDL options from *_HTTPD_* to *_ATHTTPD_*.
	* All files: Rename cyg/httpd include directory to cyg/athttpd.
	Rename all CDL options from *_HTTPD_* to *_ATHTTPD_*.
	* doc/athttpd.sgml: Document MD5 algorithm licensing.
	* src/socket.c: Remove unused SNTP include.

2006-06-13  Anthony Tonizzo  <atonizzo@gmail.com>

	* cdl/httpd.cdl: 
	* doc/athttpd.sgml: 
	* doc/mime_types.txt: 
	* include/auth.h: 
	* include/digcalc.h: 
	* include/forms.h: 
	* include/global.h: 
	* include/handler.h: 
	* include/http.h: 
	* include/md5.h: 
	* include/socket.h: 
	* src/auth.c: 
	* src/forms.c: 
	* src/handler.c: 
	* src/http.c: 
	* src/md5c.c: 
	* src/socket.c: 
	Created ATHTTPD package.
	
//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2005 eCosCentric Ltd.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros